--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ buck-out/
 /ios/Pods/
 /vendor/bundle/
 android/app/release/droppinPrices-v-0.0.1.apk
+android/app/release/droppinPrices-v-0.0.2.apk
