--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-firebase/app": "^15.1.1",
+    "@react-native-firebase/auth": "^15.1.1",
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
@@ -17,10 +19,12 @@
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-paper": "^4.12.2",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-vector-icons": "^9.2.0",
     "rn-range-slider": "^2.1.1"
   },
   "devDependencies": {
