--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
-    "rn-range-slider": "^2.1.1"
+    "rn-range-slider": "^2.1.1",
+    "tipsi-stripe": "^8.0.0-beta.10"
   },
   "devDependencies": {
     "@babel/core": "^7.18.5",
